--- a/kmfrontend/src/frontend/styles/components/decorators.scss
+++ b/kmfrontend/src/frontend/styles/components/decorators.scss
@@ -152,7 +152,7 @@
 			}
 		}
 
-		@media (max-width: $mugen-breakpoint-large) {
+		@media (max-width: $mugen-breakpoint-larger) {
 			.header-group.switchs {
 				display: none;
 			}
